kitten/reported_bugs/rust/rust-78644/stderr.txt
error[E0437]: type `Target` is not a member of trait `Deref`

  --> mutant.rs:14:1

   |

14 | type Target = T ;

   | ^^^^^^^^^^^^^^^^^ not a member of trait `Deref`



error[E0603]: module `baz` is private

  --> mutant.rs:97:12

   |

97 | use bar :: baz :: { foo , bar } ;

   |            ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: module `baz` is private

   --> mutant.rs:102:12

    |

102 | use bar :: baz ;

    |            ^^^ private module

    |

note: the module `baz` is defined here

   --> mutant.rs:34:1

    |

34  | mod baz {

    | ^^^^^^^



error[E0603]: module `i` is private

   --> mutant.rs:117:20

    |

117 | use self :: foo :: i :: A ;

    |                    ^ private module

    |

note: the module `i` is defined here

   --> mutant.rs:120:1

    |

120 | mod i {

    | ^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:78:11

   |

78 | :: bar :: baz :: A :: foo ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:79:11

   |

79 | :: bar :: baz :: A :: bar ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:80:11

   |

80 | :: bar :: baz :: A . foo2 ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:81:11

   |

81 | :: bar :: baz :: A . bar2 ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: trait `B` is private

  --> mutant.rs:83:11

   |

83 | :: bar :: B :: foo ( ) ;

   |           ^ private trait

   |

note: the trait `B` is defined here

  --> mutant.rs:27:1

   |

27 | trait B {

   | ^^^^^^^



error[E0603]: function `epriv` is private

  --> mutant.rs:87:11

   |

87 | :: bar :: epriv ( ) ;

   |           ^^^^^ private function

   |

note: the function `epriv` is defined here

  --> mutant.rs:46:1

   |

46 | fn epriv ( ) ;

   | ^^^^^^^^^^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:93:11

   |

93 | :: bar :: baz :: foo ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: module `baz` is private

  --> mutant.rs:94:11

   |

94 | :: bar :: baz :: bar ( ) ;

   |           ^^^ private module

   |

note: the module `baz` is defined here

  --> mutant.rs:34:1

   |

34 | mod baz {

   | ^^^^^^^



error[E0603]: trait `B` is private

   --> mutant.rs:114:16

    |

114 | impl :: bar :: B for f32 { fn foo ( ) -> f32 { 1.0 } }

    |                ^ private trait

    |

note: the trait `B` is defined here

   --> mutant.rs:27:1

    |

27  | trait B {

    | ^^^^^^^



warning: associated type `bar` should have an upper camel case name

 --> mutant.rs:9:6

  |

9 | type bar ;

  |      ^^^ help: convert the identifier to upper camel case: `Bar`

  |

  = note: `#[warn(non_camel_case_types)]` on by default



error[E0046]: not all trait items implemented, missing: `bar`

  --> mutant.rs:13:1

   |

9  | type bar ;

   | ---------- `bar` from trait

...

13 | impl < 'a , T > Deref for & 'a T {

   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `bar` in implementation



error[E0624]: associated function `bar` is private

  --> mutant.rs:57:21

   |

57 | self :: baz :: A :: bar ( ) ;

   |                     ^^^ private associated function



error[E0624]: associated function `bar` is private

  --> mutant.rs:70:13

   |

70 | bar :: A :: bar ( ) ;

   |             ^^^ private associated function



error[E0624]: associated function `bar` is private

  --> mutant.rs:76:16

   |

76 | :: bar :: A :: bar ( ) ;

   |                ^^^ private associated function



error[E0624]: associated function `bar` is private

  --> mutant.rs:79:23

   |

79 | :: bar :: baz :: A :: bar ( ) ;

   |                       ^^^ private associated function



error[E0624]: associated function `bar2` is private

  --> mutant.rs:81:22

   |

81 | :: bar :: baz :: A . bar2 ( ) ;

   |                      ^^^^ private associated function



thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', compiler/rustc_middle/src/ty/sty.rs:1111:14

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (ffa2e7ae8 2020-10-24) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `foo::test2`

#1 [typeck_item_bodies] type-checking all item bodies

end of query stack

error: aborting due to 19 previous errors; 1 warning emitted



Some errors have detailed explanations: E0046, E0437, E0603, E0624.

For more information about an error, try `rustc --explain E0046`.

